# ChangeLog for net-p2p/deluge
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.140 2010/01/12 21:01:06 armin76 Exp $

*deluge-1.2.0 (12 Jan 2010)

  12 Jan 2010; Raúl Porcel <armin76@gentoo.org> -deluge-1.2.0_rc4.ebuild,
  +deluge-1.2.0.ebuild:
  Version bump

  09 Jan 2010; Raúl Porcel <armin76@gentoo.org> deluge-1.2.0_rc5.ebuild:
  Add ~arm

*deluge-1.2.0_rc5 (19 Dec 2009)

  19 Dec 2009; Raúl Porcel <armin76@gentoo.org> -deluge-1.2.0_rc2.ebuild,
  -deluge-1.2.0_rc3.ebuild, +deluge-1.2.0_rc5.ebuild:
  Version bump

*deluge-1.2.0_rc4 (02 Dec 2009)

  02 Dec 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.2.0_rc4.ebuild:
  Version bump

  05 Nov 2009; Mounir Lamouri <volkmar@gentoo.org> deluge-1.2.0_rc2.ebuild,
  deluge-1.2.0_rc3.ebuild:
  Re-Keywording for ppc, bug 291423

*deluge-1.2.0_rc3 (05 Nov 2009)

  05 Nov 2009; Raúl Porcel <armin76@gentoo.org> deluge-1.1.9.ebuild,
  +deluge-1.2.0_rc3.ebuild:
  Version bump wrt #291968, add missing lzma-utils dep wrt #274754

*deluge-1.2.0_rc2 (01 Nov 2009)

  01 Nov 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.2.0_rc2.ebuild,
  deluge-9999.ebuild, metadata.xml:
  Version bump wrt #290578 and fix 9999

  04 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> deluge-1.1.9.ebuild,
  deluge-9999.ebuild:
  Replace filtering of -Wl,--as-needed with function from flag-o-matic
  eclass.

  16 Jul 2009; Thomas Anderson <gentoofan23@gentoo.org> deluge-1.1.9.ebuild:
  stable amd64, bug 273961

  14 Jul 2009; Christian Faulhammer <fauli@gentoo.org> deluge-1.1.9.ebuild:
  stable x86, security bug 273961

*deluge-1.1.9 (16 Jun 2009)

  16 Jun 2009; Raúl Porcel <armin76@gentoo.org> +deluge-1.1.9.ebuild,
  deluge-9999.ebuild:
  Version bump, add missing dep wrt #273444

  13 Jun 2009; Raúl Porcel <armin76@gentoo.org> metadata.xml:
  Remove me as maintainer, adding net-p2p, feel free to maintain this
  package
