@@ -3,9 +3,11 @@ AUX deluged.init 2187 RMD160 6283e0f053c70c8ebbf19475db0da86313a027cc SHA1 408f2
 DIST deluge-1.1.9.tar.lzma 1688164 RMD160 0766849e898adfbee230666a47fd97c8d951dcdf SHA1 b11a83c958f4351c84cd0c8b5d29e3a9f63eabb9 SHA256 d3cb85d91bb8c844e3935f32e6cfe71733149c50ddb24fe2d83c2ee6d46d6a8f
 DIST deluge-1.2.0.tar.lzma 1317506 RMD160 354fb7bced4199e154588cf6a366159b6398cf79 SHA1 e5d1304bcd2ccb6282dfe26a1e9cc34b19ec782a SHA256 65cda2026feca770bead1e79c8fb7a562bb8aff09d025ebfe3947d2d191cae89
 DIST deluge-1.2.0_rc5.tar.lzma 1308970 RMD160 7980408868f98a6ebf15ec225f747439c9ac6301 SHA1 0eaab97db489539ceb6d4eaf32c150be91461eb2 SHA256 2fb6bbc8e8889487c923b2b60d06f2a0d3ec920e337b07dadbbccd53166c4152
+DIST deluge-1.2.1.tar.lzma 1365581 RMD160 fa4e242c01844b45fc708c1221fed753d2328bc6 SHA1 b05a0ad58f73a0fd086e34c4c9eed9abd7402b3e SHA256 d834206c551cd19689c5743117b6755f382479bfe982c76150adf80415b78da6
 EBUILD deluge-1.1.9.ebuild 1671 RMD160 ec88aa4011e1e027bb113491b0a54b5b686d2aec SHA1 8b7fe6ff935d397cfa33dc6b9e4385f93fd5fe29 SHA256 22c0c0392daa7e882cf4357da0eee0d23ed93ab31d2a77ff314770b4d56d5283
 EBUILD deluge-1.2.0.ebuild 1675 RMD160 1fc49e501312d30bcbf45c83737bcdbaa87e099c SHA1 0064752bcbfbb2ed787e058424df6df4240c8331 SHA256 130309d30bc95e210efc5315e6ce20db1010d8c4093501b08e72fa28e305600f
 EBUILD deluge-1.2.0_rc5.ebuild 1679 RMD160 b5df9e9e6d84f9e994e4de7763982b6828d5048a SHA1 5b00b384d2a5b1f8d2289e78ec525cd5e3b36216 SHA256 95b4e3ff04cb2807a5180168ad4ae1cb63af624ffadca1d49ff625940797608e
+EBUILD deluge-1.2.1.ebuild 1675 RMD160 f5c8a8152550d6a114368d08e146b1d3029e1764 SHA1 f4e17f52a8a097669b3396a2975b40cdd563455c SHA256 9f4ae65c40a452d7b29ed960a31d8e38d36c393489d7fc1e9b7b852b5016fa53
 EBUILD deluge-9999.ebuild 1632 RMD160 a83c8ab25c6590c74abf83d3e8e905b9d3ab6d60 SHA1 dc3e9a9740f8b18406fda6bcfce75fb095844319 SHA256 f3eb446220027b482d8ab1d606f692431eb4ee2bad151cb701a7cc6f3107122c
-MISC ChangeLog 19524 RMD160 5dd0851f204c8b5395efb92ea752fd301f7fef73 SHA1 f2a7b5c62631de35e238fc8846d1534966f1eb9d SHA256 eb5e5c36cb32b53eb53aec2ae5c9a44658f0532cc4293f89b860b1ae6613e7f1
+MISC ChangeLog 19640 RMD160 10f9d08fe1689fe16bb79f79af8d3d10631c9821 SHA1 fb01945db36f4e766923bfdc2604162415db5fa8 SHA256 b7042fd369f2456491e3c888e2e7a38f9b4f67d6d75b71ec8880553baee48513
 MISC metadata.xml 322 RMD160 ba506cbedd76759bd1b14d569d0d121a1644fa75 SHA1 811976e88cb463281a74ac671ca920b9a15f15c3 SHA256 e88e99b119abf92a69e2115263e6992e6b2a6f711d810e6234c0cfaa21bc1d1f
