@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/deluge
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.140 2010/01/12 21:01:06 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.141 2010/03/01 20:56:59 armin76 Exp $
+
+*deluge-1.2.1 (01 Mar 2010)
+
+  01 Mar 2010; Raúl Porcel <armin76@gentoo.org> +deluge-1.2.1.ebuild:
+  Version bump
 
 *deluge-1.2.0 (12 Jan 2010)
 
